Compiladores/Compilador/parte3/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: declaracao_variavel declaracao_variaveis
    8                     | declaracao_variavel

    9 declaracao_variavel: tipo lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 lista_comandos: ε
   15               | comando lista_comandos

   16 comando: leitura
   17        | escrita
   18        | repeticao
   19        | selecao
   20        | atribuicao

   21 leitura: T_LEIA T_IDENTIF

   22 escrita: T_ESCREVA expressao

   23 $@3: ε

   24 $@4: ε

   25 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

   26 $@5: ε

   27 $@6: ε

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   29 $@7: ε

   30 atribuicao: T_IDENTIF $@7 T_ATRIB expressao

   31 expressao: expressao T_OU expressao
   32          | expressao T_E expressao
   33          | expressao T_IGUAL expressao
   34          | expressao T_MAIOR expressao
   35          | expressao T_MENOR expressao
   36          | expressao T_MAIS expressao
   37          | expressao T_MENOS expressao
   38          | expressao T_VEZES expressao
   39          | expressao T_DIV expressao
   40          | termo

   41 termo: T_IDENTIF
   42      | T_NUMERO
   43      | T_V
   44      | T_F
   45      | T_NAO termo
   46      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 12 13 21 30 41
    T_LEIA (262) 21
    T_ESCREVA (263) 22
    T_ENQTO (264) 25
    T_FACA (265) 25
    T_FIMENQTO (266) 25
    T_SE (267) 28
    T_ENTAO (268) 28
    T_SENAO (269) 28
    T_FIMSE (270) 28
    T_ATRIB (271) 30
    T_VEZES (272) 38
    T_DIV (273) 39
    T_MAIS (274) 36
    T_MENOS (275) 37
    T_MAIOR (276) 34
    T_MENOR (277) 35
    T_IGUAL (278) 33
    T_E (279) 32
    T_OU (280) 31
    T_V (281) 43
    T_F (282) 44
    T_NUMERO (283) 42
    T_NAO (284) 45
    T_ABRE (285) 46
    T_FECHA (286) 46
    T_LOGICO (287) 10
    T_INTEIRO (288) 11


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 3
        on right: 0
    $@1 (36)
        on left: 1
        on right: 3
    $@2 (37)
        on left: 2
        on right: 3
    cabecalho (38)
        on left: 4
        on right: 3
    variaveis (39)
        on left: 5 6
        on right: 3
    declaracao_variaveis (40)
        on left: 7 8
        on right: 6 7
    declaracao_variavel (41)
        on left: 9
        on right: 7 8
    tipo (42)
        on left: 10 11
        on right: 9
    lista_variaveis (43)
        on left: 12 13
        on right: 9 12
    lista_comandos (44)
        on left: 14 15
        on right: 3 15 25 28
    comando (45)
        on left: 16 17 18 19 20
        on right: 15
    leitura (46)
        on left: 21
        on right: 16
    escrita (47)
        on left: 22
        on right: 17
    repeticao (48)
        on left: 25
        on right: 18
    $@3 (49)
        on left: 23
        on right: 25
    $@4 (50)
        on left: 24
        on right: 25
    selecao (51)
        on left: 28
        on right: 19
    $@5 (52)
        on left: 26
        on right: 28
    $@6 (53)
        on left: 27
        on right: 28
    atribuicao (54)
        on left: 30
        on right: 20
    $@7 (55)
        on left: 29
        on right: 30
    expressao (56)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 22 25 28 30 31 32 33 34 35 36 37 38 39 46
    termo (57)
        on left: 41 42 43 44 45 46
        on right: 40 45


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    declaracao_variavel   go to state 11
    tipo                  go to state 12


State 7

   10 tipo: T_LOGICO •

    $default  reduce using rule 10 (tipo)


State 8

   11 tipo: T_INTEIRO •

    $default  reduce using rule 11 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 13


State 10

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: declaracao_variavel • declaracao_variaveis
    8                     | declaracao_variavel •

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 14
    declaracao_variavel   go to state 11
    tipo                  go to state 12


State 12

    9 declaracao_variavel: tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 15

    lista_variaveis  go to state 16


State 13

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 17


State 14

    7 declaracao_variaveis: declaracao_variavel declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 15

   13 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 13 (lista_variaveis)


State 16

    9 declaracao_variavel: tipo lista_variaveis •
   12 lista_variaveis: lista_variaveis • T_IDENTIF

    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 9 (declaracao_variavel)


State 17

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 24
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 18

   12 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 12 (lista_variaveis)


State 19

   30 atribuicao: T_IDENTIF • $@7 T_ATRIB expressao

    $default  reduce using rule 29 ($@7)

    $@7  go to state 31


State 20

   21 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 32


State 21

   22 escrita: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 39
    termo      go to state 40


State 22

   25 repeticao: T_ENQTO • $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 23 ($@3)

    $@3  go to state 41


State 23

   28 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 42
    termo      go to state 40


State 24

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIM

    T_FIM  shift, and go to state 43


State 25

   15 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 44
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 26

   16 comando: leitura •

    $default  reduce using rule 16 (comando)


State 27

   17 comando: escrita •

    $default  reduce using rule 17 (comando)


State 28

   18 comando: repeticao •

    $default  reduce using rule 18 (comando)


State 29

   19 comando: selecao •

    $default  reduce using rule 19 (comando)


State 30

   20 comando: atribuicao •

    $default  reduce using rule 20 (comando)


State 31

   30 atribuicao: T_IDENTIF $@7 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 45


State 32

   21 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 21 (leitura)


State 33

   41 termo: T_IDENTIF •

    $default  reduce using rule 41 (termo)


State 34

   43 termo: T_V •

    $default  reduce using rule 43 (termo)


State 35

   44 termo: T_F •

    $default  reduce using rule 44 (termo)


State 36

   42 termo: T_NUMERO •

    $default  reduce using rule 42 (termo)


State 37

   45 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    termo  go to state 46


State 38

   46 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 47
    termo      go to state 40


State 39

   22 escrita: T_ESCREVA expressao •
   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55
    T_OU     shift, and go to state 56

    $default  reduce using rule 22 (escrita)


State 40

   40 expressao: termo •

    $default  reduce using rule 40 (expressao)


State 41

   25 repeticao: T_ENQTO $@3 • expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 57
    termo      go to state 40


State 42

   28 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_ENTAO  shift, and go to state 58
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55
    T_OU     shift, and go to state 56


State 43

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM •

    $default  reduce using rule 3 (programa)


State 44

   15 lista_comandos: comando lista_comandos •

    $default  reduce using rule 15 (lista_comandos)


State 45

   30 atribuicao: T_IDENTIF $@7 T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 59
    termo      go to state 40


State 46

   45 termo: T_NAO termo •

    $default  reduce using rule 45 (termo)


State 47

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao
   46 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55
    T_OU     shift, and go to state 56
    T_FECHA  shift, and go to state 60


State 48

   38 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 61
    termo      go to state 40


State 49

   39 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 62
    termo      go to state 40


State 50

   36 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 63
    termo      go to state 40


State 51

   37 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 64
    termo      go to state 40


State 52

   34 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 65
    termo      go to state 40


State 53

   35 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 66
    termo      go to state 40


State 54

   33 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 67
    termo      go to state 40


State 55

   32 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 68
    termo      go to state 40


State 56

   31 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 69
    termo      go to state 40


State 57

   25 repeticao: T_ENQTO $@3 expressao • T_FACA $@4 lista_comandos T_FIMENQTO
   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_FACA   shift, and go to state 70
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55
    T_OU     shift, and go to state 56


State 58

   28 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@5)

    $@5  go to state 71


State 59

   30 atribuicao: T_IDENTIF $@7 T_ATRIB expressao •
   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55
    T_OU     shift, and go to state 56

    $default  reduce using rule 30 (atribuicao)


State 60

   46 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 46 (termo)


State 61

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   38          | expressao T_VEZES expressao •
   39          | expressao • T_DIV expressao

    $default  reduce using rule 38 (expressao)


State 62

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao
   39          | expressao T_DIV expressao •

    $default  reduce using rule 39 (expressao)


State 63

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   36          | expressao T_MAIS expressao •
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 36 (expressao)


State 64

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   37          | expressao T_MENOS expressao •
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 37 (expressao)


State 65

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   34          | expressao T_MAIOR expressao •
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51

    $default  reduce using rule 34 (expressao)


State 66

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   35          | expressao T_MENOR expressao •
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51

    $default  reduce using rule 35 (expressao)


State 67

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   33          | expressao T_IGUAL expressao •
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53

    $default  reduce using rule 33 (expressao)


State 68

   31 expressao: expressao • T_OU expressao
   32          | expressao • T_E expressao
   32          | expressao T_E expressao •
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54

    $default  reduce using rule 32 (expressao)


State 69

   31 expressao: expressao • T_OU expressao
   31          | expressao T_OU expressao •
   32          | expressao • T_E expressao
   33          | expressao • T_IGUAL expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_MAIS expressao
   37          | expressao • T_MENOS expressao
   38          | expressao • T_VEZES expressao
   39          | expressao • T_DIV expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_E      shift, and go to state 55

    $default  reduce using rule 31 (expressao)


State 70

   25 repeticao: T_ENQTO $@3 expressao T_FACA • $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 24 ($@4)

    $@4  go to state 72


State 71

   28 selecao: T_SE expressao T_ENTAO $@5 • lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 73
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 72

   25 repeticao: T_ENQTO $@3 expressao T_FACA $@4 • lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 74
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 73

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos • T_SENAO $@6 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 75


State 74

   25 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos • T_FIMENQTO

    T_FIMENQTO  shift, and go to state 76


State 75

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO • $@6 lista_comandos T_FIMSE

    $default  reduce using rule 27 ($@6)

    $@6  go to state 77


State 76

   25 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO •

    $default  reduce using rule 25 (repeticao)


State 77

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 • lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 78
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 78

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos • T_FIMSE

    T_FIMSE  shift, and go to state 79


State 79

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE •

    $default  reduce using rule 28 (selecao)
